# rustyboy

./: .gitignore  Cargo.toml  README.md  ]  flake.nix  rust-toolchain.toml  rustfmt.toml  unprefixed.rs
.cargo/: config.toml
_old_core/: Cargo.toml
_old_core/src/: prelude.rs  program.rs  utils.rs
_old_core/src/hardware/: bus.rs
_old_core/src/hardware/cpu/: mod.rs
_old_core/src/io/graphics/: colors.rs
core/: Cargo.toml  HARDWARE.md  TODO.md
core/src/: bus.rs  joypad.rs  lib.rs  memory_bus.rs  prelude.rs  program.rs  utils.rs
core/src/cartridge/: header.rs  mod.rs
core/src/cpu/: mod.rs
core/src/cpu/instructions/: decode.rs  execute.rs  mod.rs
core/src/cpu/memory/: mod.rs  registers.rs  stack.rs
core/src/hardware/: HARDWARE.md  bus.rs  cartridge.rs  mod.rs  ppu.rs
core/src/hardware/cpu/: mod.rs
core/src/io/graphics/: colors.rs  lcd.rs  mod.rs  objects.rs
core/src/ppu/: mod.rs
core/src/ppu/graphics/: colors.rs  lcd.rs  mod.rs  objects.rs
instructions/: Cargo.toml
instructions/src/: data.rs  instruction.rs  main.rs
opcodes/: flake.nix  package.json  tsconfig.json
opcodes/src/: index.ts  opcodes.json
playground/: Cargo.toml
playground/src/: main.rs
roms/gb/: bootix.debug.txt  bootix_dmg.asm
src/: _test.rs  gui.rs  lib.rs  main.rs  playground.rs  prelude.rs  program.rs  test.rs
src/CPU/: mod.rs  stack.rs
src/CPU/instructions/: _decode.rs  decode.rs  execute.rs  mod.rs
src/CPU/instructions/decode/: mod.rs  prefixed.rs  unprefixed.rs
src/CPU/memory/: mod.rs  registers.rs
src/cpu/: mod.rs
src/cpu/instructions/: execute.rs  mod.rs
src/cpu/memory/: mod.rs  registers.rs  stack.rs
src/hardware/: HARDWARE.md  bus.rs  cartridge.rs  memory.rs  mod.rs
src/hardware/CPU/: execute.rs  instructions.rs  mod.rs  registers.rs
src/hardware/cpu/: mod.rs
src/hardware/cpu/memory/: mod.rs  (+1 more)
src/io/graphics/: mod.rs  tiles.rs
src/lib/: gui.rs  mod.rs  nintendo_logo.rs  rom.rs
(+32 files in other folders)
