[workspace]
members = ["core"]
resolver = "2"

[package]
name = "gb-emu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gb"
path = "src/main.rs"
test = false

[[bin]]
name = "test"
path = "src/test.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gb = { path = "./core" }
glium = "0.33.0"
winit = "0.28.7" # Dependency of glium v0.33. Winit v0.29 doesn't work
# enumflags2 = "0.7.8"
